welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: reassignment to val
  if(getDirection=Direction.EST){
                 ^